--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "Easy-webdev-startpack",
-	"version": "2.1.1",
+	"name": "emotionalintellect",
+	"version": "1.0.0",
 	"description": "HTML5+CSS3 template for easy start website project'",
 	"main": "gulpfile.js",
 	"devDependencies": {
@@ -44,9 +44,5 @@
 	},
 	"repository": "https://github.com/budfy/Easy-webdev-startpack.git",
 	"author": "Roman Serdyuk",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/budfy/Startpack_Gulp4/issues"
-	},
-	"homepage": "https://github.com/budfy/Startpack_Gulp4#readme"
+	"license": "ISC"
 }
